--- a/src/AspNetCore.Identity.Dapper.Samples.Web/Views/Manage/_ManageNav.cshtml
+++ b/src/AspNetCore.Identity.Dapper.Samples.Web/Views/Manage/_ManageNav.cshtml
@@ -1,5 +1,4 @@
-﻿@using AspNetCore.Identity.Dapper.Samples.Web.Views.Manage
-@inject SignInManager<ApplicationUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
